--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "native-angular",
   "version": "0.0.0",
   "scripts": {
+    "android": "ns run android --no-hmr",
+    "ios": "ns run ios --no-hmr",
+    "mobile": "ns run",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -11,6 +14,11 @@
   },
   "private": true,
   "dependencies": {
+    "@nativescript/angular": "~10.1.0",
+    "@nativescript/core": "~7.0.0",
+    "@nativescript/theme": "~2.5.0",
+    "reflect-metadata": "~0.1.12",
+    "tslib": "^2.0.0",
     "@angular/animations": "~10.2.0",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
@@ -20,7 +28,6 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -28,9 +35,13 @@
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.2.0",
     "@angular/language-service": "~10.2.0",
-    "@types/node": "^12.11.1",
+    "@nativescript/android": "7.0.1",
+    "@nativescript/schematics": "^10.1.0",
+    "@nativescript/tslint-rules": "~0.0.5",
+    "@nativescript/webpack": "~3.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -43,5 +54,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.3"
-  }
+  },
+  "main": "main.tns.js"
 }
